// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncomingLiteratureReferencesLinkAction renders with required props 1`] = `
<UserActionWrapper>
  <EventTracker
    eventAction="Literature references search"
    eventId="Citations:Search"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <Link
      to="/literature?q=refersto:recid:888"
    >
      <IconText
        icon={<LoginOutlined />}
        text={
          <React.Fragment>
            <FormattedNumber>
              29
            </FormattedNumber>
             
            citations
          </React.Fragment>
        }
      />
    </Link>
  </EventTracker>
</UserActionWrapper>
`;

exports[`IncomingLiteratureReferencesLinkAction renders with required props when reference count is singular 1`] = `
<UserActionWrapper>
  <EventTracker
    eventAction="Literature references search"
    eventId="Papers:Search"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <Link
      to="/literature?q=refersto:recid:888"
    >
      <IconText
        icon={<LoginOutlined />}
        text={
          <React.Fragment>
            <FormattedNumber>
              1
            </FormattedNumber>
             
            paper
          </React.Fragment>
        }
      />
    </Link>
  </EventTracker>
</UserActionWrapper>
`;
